<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zhengdianfang.foodsafety.common.components.AppEditText
        android:id="@+id/userNameEdit"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="32dp"
        android:inputType="textPersonName"
        android:hint="@string/email_or_phone_hint"
        app:label_text="@string/account_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.zhengdianfang.foodsafety.common.components.AppEditText
        android:id="@+id/passwordEdit"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="32dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        app:label_text="@string/set_password_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEdit" />

    <com.zhengdianfang.foodsafety.common.components.AppEditText
        android:id="@+id/confirmPasswordEdit"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_hint"
        app:label_text="@string/confirm_password_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
        />

    <Button
        android:id="@+id/nextStepButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/next_step_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEdit" />

    <TextView
        android:id="@+id/existAccountView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/exist_account_just_login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>