<resources>
    <string name="app_name">FoodSafety</string>
    <string name="title_food_safety_search">Module Title</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="account_label">账号</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="sms_code_label">验证码</string>
    <string name="sms_code_hint">请输入验证码</string>
    <string name="set_password_label">设置密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="confirm_password_hint">重复确认密码</string>
    <string name="confirm_password_label">确认密码</string>
    <string name="confirm_reset_password_button">确认重置密码</string>
    <string name="reset_password_success_toast">重置密码成功</string>
    <string name="email_format_toast">请输入正确的邮箱格式</string>
    <string name="password_eqaul_toast">密码不一致</string>
    <string name="find_password_title">找回密码</string>
    <string name="login_button_text">登录</string>
    <string name="just_register_text">立即注册</string>
    <string name="third_login_title">使用社交账号一键登录</string>
    <string name="password_label">密码</string>
    <string name="login_success_toast">登录成功</string>
    <string name="enterprise_user_text">企业用户</string>
    <string name="person_user_text">个人用户</string>
    <string name="email_or_phone_hint">手机号/邮箱</string>
    <string name="next_step_text">下一步</string>
    <string name="exist_account_just_login_text">已有账号， 立即登录</string>
    <string name="email_or_phone_toast">请输入手机号或邮箱</string>
    <string name="register_success_toast">注册成功</string>
    <string name="register_title">注册</string>
    <string name="perfect_info_title">完善信息</string>
    <string name="enterprise_name_title">企业名称</string>
    <string name="QS">QS</string>
    <string name="CS">CS</string>
    <string name="health_product_name">保健品</string>
    <string name="enterprise_type_title">企业类型</string>
    <string name="enterprise_name_hint">输入企业名称</string>
    <string name="verify_text">验证</string>
    <string name="credit_code_title">统一社会信用代码</string>
    <string name="credit_code_hint">输入统一社会信用代码</string>
    <string name="food_category_title">所属食品类别</string>
    <string name="add_text">添加</string>
    <string name="business_license_photo_title">营业执照照片</string>
    <string name="submit_text">提交</string>
    <string name="setting_text">设置</string>
    <string name="home_page_text">首页</string>
    <string name="menu_style_setting_text">功能展示样式</string>
    <string name="feedback_setting_text">意见反馈</string>
    <string name="about_us_setting_text">关于我们</string>
    <string name="share_setting_text">分享易食安</string>
    <string name="evaluate_setting_text">给个好评</string>
    <string name="private_clause_setting_text">易食安使用条款</string>
    <string name="setting_fragment_title">设置</string>
    <string name="logout_text">退出登录</string>

    <string name="list_style_text">列表样式</string>
    <string name="grad_style_text">宫格样式</string>
    <string name="style_manage_title">功能展示样式</string>
    <string name="save_text">保存</string>
    <string name="display_style_text">展示样式</string>
    <string name="display_text">显示</string>
    <string name="menu_manage_title">功能展示</string>
    <string name="menu_manage_tips">您可以选择隐藏不常用的功能</string>

</resources>
