<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.GlobalWindowStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".profile.fragments.FindPasswordFragment">

    <include
        layout="@layout/navigation_bar_dark_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.zhengdianfang.foodsafety.common.components.AppEditText
        android:id="@+id/userNameEdit"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email_hint"
        android:inputType="textPersonName"
        app:label_text="@string/account_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationBar" />

    <com.zhengdianfang.foodsafety.common.components.AppEditText
        android:id="@+id/smsCodeEdit"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/sms_code_hint"
        app:label_text="@string/sms_code_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEdit" />

    <com.zhengdianfang.foodsafety.common.components.AppEditText
        android:id="@+id/newPasswordEdit"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        app:label_text="@string/set_password_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smsCodeEdit" />

    <com.zhengdianfang.foodsafety.common.components.AppEditText
        android:id="@+id/confirmPasswordEdit"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_hint"
        app:label_text="@string/confirm_password_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordEdit" />

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:text="@string/confirm_reset_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEdit" />

</android.support.constraint.ConstraintLayout>